packages/components/src/components/page/page.scss
@use "@db-ui/foundations/build/scss/variables";

.db-page {
	opacity: 0;

	&[data-fade-in="true"] {
		transition: opacity variables.$db-transition-straight-emotional;
	}

	&:not([data-fonts-loaded]),
	&[data-fonts-loaded="true"] {
		opacity: 1;
	}

	&[data-variant="fixed"] {
		block-size: 100%;
		min-block-size: 100%;
		display: flex;
		flex-direction: column;

		header,
		footer {
			display: flex;
			flex: 0 1 auto;
			flex-grow: 0;
			flex-shrink: 0;
		}

		main {
			display: flex;
			flex-direction: column;
			overflow: auto;
			flex: 1 1 auto;
			inline-size: 100%;
		}
	}
}

